--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   In this blog, I’ll dive into a range of topics from projects, best-practices, and news surrounding the embedded software industry.
 # baseurl: "" # the subpath of your site, e.g. /blog
 baseurl: ""
-url: "https://jgoard.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  "JGoard"
 linkedin:         "https://linkedin.com/in/joshuagoard" 
 
