--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Josh's Bitwise Blog
+comments: true
 email: goardjosh@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to Josh's Bitwise Blog, your go-to destination for all things embedded software and hardware! I’m Josh Goard, an embedded software engineer specializing in real-time software for industrial machines. 
